Finished wedding gram modal description

--- a/index.html
+++ b/index.html
@@ -503,34 +503,24 @@
                                                 <img src="images/rickMorty.png" alt="">
                                             </div> 
                                         </div> <!-- End Video -->
-                                        <div class="row d-flex justify-content-center text">
-                                            <!-- Summary -->
-                                            <div class="col-md-7 mt-3 mb-3">
-                                                <h6 class="modal-heading mb-4">Using RESTful API's & Redux</h6>
-                                                <p>The application was created to demonstrate and practice using asynchronous action creators in Redux by returning data from an API of my choice. I chose to use the <a class="web-links" href="https://rickandmortyapi.com/" target="_blank" >Rick and Morty</a> API to create the Rick & Morty Universe app; which displays character, location, and episodic data from it. </p>
-                                            </div> <!--End Summary-->
-                                            <!-- Tech Stack -->
-                                            <div class="col-md-5 mt-3 mb-3 ">
-                                                <h6 class="text-center modal-heading mb-4">Tech Stack</h6>
-                                                <div class="row">
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>React</li>
-                                                            <li>Redux</li>
-                                                            <li>Redux-thunk</li>
-                                                            <li>React-loader-spinner</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>Axios</li>
-                                                            <li>Semantic-ui</li>
-                                                            <li>Styled Components</li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div> <!--End Tech Stack-->
-                                        </div>
+                                        <!-- Summary -->
+                                        <div class="row d-flex flex-column text-background p-4">
+                                            <div class="modal-heading ">
+                                                <h5>Using RESTful API's & Redux</h5>
+                                                <p class= "modal-subheading font-weight-normal ">Tech Stack: <span class="font-weight-light font-italic light-teal">React, Redux, Redux-thunk, React-loader-spinner, Axios, Semantic-ui, Styled Components</span></p>
+                                            </div>
+                                            <!-- Description -->
+                                            <div class="modal-description px-4">
+                                                <p>The Rick & Morty Universe app was to demonstrate my understanding of how to build a React Redux app and return data from an API of my choice. I chose to use the <a class="web-links" href="https://rickandmortyapi.com/" target="_blank" >Rick and Morty</a> API which displays characters, locations, and episodic data from the television series.</p>
+                                                <ul class="pl-3 .modal-list">
+                                                    <li class="p-1" >Used Axios to fetch the data from the API inside of an async action creator.</li>
+                                                    <li class="p-1">Added the data from the API to the Redux store</li>
+                                                    <li class="p-1">Displayed the data collected from the store in a component.</li>
+                                                    <li class="p-1">Used Styled components and <a class="web-links" href="https://semantic-ui.com/" target="_blank" >Semantic-ui</a> to style the app.</li>
+                                                    <li class="p-1">Used and customized the <a class="web-links" href="https://www.npmjs.com/package/react-loader-spinner" target="_blank" >react-loader-spinner</a> library to match the app's design aesthetic.</li>
+                                                </ul>
+                                            </div><!-- End Description -->
+                                        </div><!-- End Summary -->
                                     </div><!--End modal-container-->
                                 </div> <!--End Body-->
                                 <!-- Footer -->
@@ -581,35 +571,23 @@
                                                 <img src="images/buildWeekOne.png" alt="">
                                             </div> 
                                         </div> <!-- End Picture/Video -->
-                                        <div class="row d-flex justify-content-center text">
-                                            <!-- Summary -->
-                                            <div class="col-md-7 mt-3 mb-3">
-                                                <h6 class="modal-heading mb-4">UI Development and Component Building</h6>
-                                                <p>Wedding Gram is a service designed for Wedding Planners and newly-engaged Couples. Wedding Planners can log in, create a simple post about a wedding event, and then share it without needing to share too much info. Couples can browse all of these posted events to get ideas about for their own wedding to plan.When not logged in, you can view the Home, Login, and Register pages. After login in or registering as a user, You can view your personal dashboard to Add/Edit/Delete posts.</p>
-                                            </div> <!--End Summary-->
-                                            <!-- Tech Stack -->
-                                            <div class="col-md-5 mt-3 mb-3 ">
-                                                <h6 class="text-center modal-heading mb-4">Tech Stack</h6>
-                                                <div class="row">
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>Html</li>
-                                                            <li>Less</li>
-                                                            <li>JavaScript</li>
-                                                            <li>React/Redux</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>Sass</li>
-                                                            <li>Node</li>
-                                                            <li>Express</li>
-                                                            <li>PostgreSQL</li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div> <!--End Tech Stack-->
-                                        </div>
+                                        <!-- Summary -->
+                                        <div class="row d-flex flex-column text-background p-4">
+                                            <div class="modal-heading ">
+                                                <h5>UI Development and Component Building</h5>
+                                                <p class= "modal-subheading font-weight-normal ">Tech Stack: <span class="font-weight-light font-italic light-teal">HTML, Less, JavaScript, Adobe Xd, Adobe Illustrator</span></p>
+                                            </div>
+                                            <!-- Description -->
+                                            <div class="modal-description px-4">
+                                                <p>Developed by a team of three UI developers, two frontend developers, and one backend developer, the Wedding Gram app is a service designed for Wedding Planners and newly-engaged Couples. Built-in a week, the application offers a place for wedding planners to post current and past weddings they have created; while allowing couples who need a planner to view the posts and give them the ability to contact the wedding planner that matches them.</p>
+                                                <ul class="pl-3 .modal-list">
+                                                    <li class="p-1" >As on of three UI developers, I created a multi-page marketing website that matched the theme our team chose and provided users with details about the product our team built.</li>
+                                                    <li class="p-1">Using vanilla JavaScript, I created custom "Testimonial" accordian and the "About Team" tab components.</li>
+                                                    <li class="p-1">We employed the use of Less to develope a responsive marketing page for multiple screen sizes.</li>
+                                                    <li class="p-1">I designed the logo and theme for Wedding Gram frontend app and marketing pages using Adobe-Xd and Adobe Illustrator. </li>
+                                                </ul>
+                                            </div><!-- End Description -->
+                                        </div><!-- End Summary -->
                                     </div><!--End modal-container-->
                                 </div> <!--End Body-->
                                 <!-- Footer -->
