Finished portfolio description re-design

--- a/index.html
+++ b/index.html
@@ -637,41 +637,29 @@
                                                 <img src="images/landingPage.png" alt="">
                                             </div> 
                                         </div> <!-- End Picture/Video -->
-                                        <div class="row d-flex justify-content-center text">
-                                            <!-- Summary -->
-                                            <div class="col-md-7 mt-3 mb-3">
-                                                <h6 class="modal-heading mb-4">Responsive Web Design & Product Landing Page</h6>
-                                                <p>Bella Tea Room is a project built for one of five <a class="web-links" href="https://www.freecodecamp.org/">freecodecamp.org</a> Responsive Web design Project. Following criteria set forth by the provided user stories, I created a landing page that gives a quick insight to what Bella Tea Room is and what services they provide to potential customers </p>
-                                            </div> <!--End Summary-->
-                                            <!-- Tech Stack -->
-                                            <div class="col-md-5 mt-3 mb-3 ">
-                                                <h6 class="text-center modal-heading mb-4">Tech Stack</h6>
-                                                <div class="row">
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>Bootstrap</li>
-                                                            <li>Less</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>jQuery</li>
-                                                            <li>fontAwesome</li>
-                                                        </ul>
-                                                    </div>
-                                                    
-                                                </div>
-                                            </div> <!--End Tech Stack-->
-                                        </div>
+                                        <!-- Summary -->
+                                        <div class="row d-flex flex-column text-background p-4">
+                                            <div class="modal-heading ">
+                                                <h5>Responsive Web Design & Product Landing Page</h5>
+                                                <p class= "modal-subheading font-weight-normal ">Tech Stack: <span class="font-weight-light font-italic light-teal">Bootstrap, Less, jQuery, fontawesome, Adobe XD, Adobe Illustrator, Adobe Photoshop</span></p>
+                                            </div>
+                                            <!-- Description -->
+                                            <div class="modal-description px-4">
+                                                <p>Designed and created a landing page that gives insight to an imaginary tea shop called Bella Tea Room, letting users know what experiences and services they provide. This project was built for one of five  <a class="web-links" target="_blank" href="https://www.freecodecamp.org/">freecodecamp.org</a> Responsive Web design Projects.</p>
+                                                <ul class="pl-3 .modal-list">
+                                                    <li class="p-1" >Following a given user story and guideline, I used Bootstrap to enable the site responsive design.</li>
+                                                    <li class="p-1">Used Less for ease of styling and brining the design aesthetic to life.</li>
+                                                    <li class="p-1">For the design of the page, I used Adobe XD and Adobe Illustrator to create the logos, moodboards, and wireframes. For image manipulation and editing I use Adobe Photoshop.</li>
+                                                </ul>
+                                            </div><!-- End Description -->
+                                        </div><!-- End Summary -->
                                     </div><!--End modal-container-->
                                 </div> <!--End Body-->
                                 <!-- Footer -->
+                                <!-- <i class="fab fa-codepen"></i> -->
                                 <div class="modal-footer">
-                                    <a class="modal-btn mr-4" href="https://github.com/jadeli1720/buildweekone-Wedding-Gram" target="blank">
-                                        <i class="fab fa-github"></i>
-                                    </a>
-                                    <a class="modal-btn mr-4" href="https://weddingram.netlify.com/" target="blank">
-                                        <i class="fas fa-external-link-square-alt"></i>
+                                    <a class="modal-btn mr-4" href="https://codepen.io/jadeli1720/full/XwzPed" target="blank">
+                                        <i class="fab fa-codepen"></i>
                                     </a>
                                 </div> <!--End Footer-->
                             </div> <!--End Modal Content-->
@@ -712,31 +700,22 @@
                                                 <img src="images/5150whips.png" alt="">
                                             </div> 
                                         </div> <!-- Picture/End Video -->
-                                        <div class="row d-flex justify-content-center text">
-                                            <!-- Summary -->
-                                            <div class="col-md-7 mt-3 mb-3">
-                                                <h6 class="modal-heading mb-4">E-commerce Site Rebuild</h6>
-                                                <p>5150whips is an off-road LED company that needed a new e-commerce website that had better functionality and fit closer to their business needs and company brand. </p>
-                                            </div> <!--End Summary-->
-                                            <!-- Tech Stack -->
-                                            <div class="col-md-5 mt-3 mb-3 ">
-                                                <h6 class="text-center modal-heading mb-4">Tech Stack</h6>
-                                                <div class="row">
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>Bootstrap</li>
-                                                            <li>CSS</li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="col-md-6 no-pad">
-                                                        <ul class="tech-list">
-                                                            <li>jQuery</li>
-                                                            <li>Javascript</li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div> <!--End Tech Stack-->
-                                        </div>
+                                        <!-- Summary -->
+                                        <div class="row d-flex flex-column text-background p-4">
+                                            <div class="modal-heading ">
+                                                <h5>E-commerce Site Rebuild</h5>
+                                                <p class= "modal-subheading font-weight-normal ">Tech Stack: <span class="font-weight-light font-italic light-teal">Bootstrap, CSS, JavaScript, jQuery, Adobe Illustrator, Adobe Photoshop</span></p>
+                                            </div>
+                                            <!-- Description -->
+                                            <div class="modal-description px-4">
+                                                <p>5150whips is an e-commerce site that offers remote-controlled multicolored LED lights for off-road vehicles such as UTV’s, RZR’s, quads, and more.</p>
+                                                <ul class="pl-3 .modal-list">
+                                                    <li class="p-1" >Hired by the client as a freelance web designer to refactor, fix, maintain and make updates to the existing website at the time.</li>
+                                                    <li class="p-1">I worked closely with the client to rebuild and redesign a new website that better-represented company brand, theme, and customers.</li>
+                                                    <li class="p-1">Employed the use of Adobe Illustrator and Photoshop to create metal design elements and to edit images.</li>
+                                                </ul>
+                                            </div><!-- End Description -->
+                                        </div><!-- End Summary -->
                                     </div><!--End modal-container-->
                                 </div> <!--End Body-->
                                 <!-- Footer -->
