Cleaned up and made final edits to portfolio descriptions.

--- a/index.html
+++ b/index.html
@@ -442,15 +442,15 @@
                                         <div class="row d-flex flex-column text-background p-4">
                                             <div class="modal-heading ">
                                                 <h5>Sleep Tracker Application</h5>
-                                                <p class= "modal-subheading font-weight-normal ">Tech Stack: <span class="font-weight-light font-italic light-teal">React, React-vis, React-big-calendar, Formik, Styled Components, Fontawesome</span></p>
+                                                <p class= "modal-subheading font-weight-normal ">Tech Stack: <span class="font-weight-light font-italic light-teal">React, React-vis, React-big-calendar, Formik, Styled Components, fontawesome</span></p>
                                             </div>
                                             <!-- Description -->
                                             <div class="modal-description px-4">
                                                 <p>The Sleepmood application was built by a team of one UX designer,three UI, three frontend, and one backend developer(s). The React app enables users to analyze and repair their sleeping habits based purely on their moods during the day, before they go to sleep, and after.</p>
                                                 <ul class="pl-3 .modal-list">
-                                                    <li class="p-1" >As one of the front-end developers, I helped create forms using a combination of the <a href="https://front-end.bw-african-marketplace.now.sh/" target="_blank" class="web-links">Formik</a> library and <a href="https://fontawesome.com/" target="_blank" class="web-links">fontawesome</a> emojis';  allowing users to easily and quickly record their sleep mood data.</li>
+                                                    <li class="p-1" >As one of the frontend developers, I helped create forms using a combination of the <a href="https://front-end.bw-african-marketplace.now.sh/" target="_blank" class="web-links">Formik</a> library and <a href="https://fontawesome.com/" target="_blank" class="web-links">fontawesome</a> emojis';  allowing users to easily and quickly record their sleep mood data.</li>
                                                     <li class="p-1">On the users dashboard, a weekly overview of a thier sleep mood data was provided and implemented with the <a href="https://uber.github.io/react-vis/" target="_blank" class="web-links">React-vis </a>library; a react data-visualization library developed by Uber.</li>
-                                                    <li class="p-1">To fit the application's overall aesthetic theme created by our UX designer, <a href="https://uber.github.io/react-vis/" target="_blank" class="web-links">React-big-calendar</a> was customized to allow users to view and edit their sleep mood data from a monthly calendar overview.</li>
+                                                    <li class="p-1">To fit the application's overall aesthetic theme created by our UX designer, <a href="https://uber.github.io/react-vis/" target="_blank" class="web-links">React-big-calendar</a> was customized to allow users to view and edit their sleep mood data from a monthly calendar format.</li>
                                                 </ul>
                                             </div><!-- End Description -->
                                         </div><!-- End Summary -->
@@ -575,7 +575,7 @@
                                         <div class="row d-flex flex-column text-background p-4">
                                             <div class="modal-heading ">
                                                 <h5>UI Development and Component Building</h5>
-                                                <p class= "modal-subheading font-weight-normal ">Tech Stack: <span class="font-weight-light font-italic light-teal">HTML, Less, JavaScript, Adobe Xd, Adobe Illustrator</span></p>
+                                                <p class= "modal-subheading font-weight-normal ">Tech Stack: <span class="font-weight-light font-italic light-teal">HTML, Less, JavaScript, Adobe XD, Adobe Illustrator</span></p>
                                             </div>
                                             <!-- Description -->
                                             <div class="modal-description px-4">
@@ -645,7 +645,7 @@
                                             </div>
                                             <!-- Description -->
                                             <div class="modal-description px-4">
-                                                <p>Designed and created a landing page that gives insight to an imaginary tea shop called Bella Tea Room, letting users know what experiences and services they provide. This project was built for one of five  <a class="web-links" target="_blank" href="https://www.freecodecamp.org/">freecodecamp.org</a> Responsive Web design Projects.</p>
+                                                <p>Designed and created a landing page that gives insight to an imaginary tea shop called Bella Tea Room, letting users know what experiences and services they provide. This project was built for one of five  <a class="web-links" target="_blank" href="https://www.freecodecamp.org/">freecodecamp.org</a> Responsive Web Design projects.</p>
                                                 <ul class="pl-3 .modal-list">
                                                     <li class="p-1" >Following a given user story and guideline, I used Bootstrap to enable the site responsive design.</li>
                                                     <li class="p-1">Used Less for ease of styling and brining the design aesthetic to life.</li>
