--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Animate.CSS and WOW -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <!-- fontAwesome -->
     <script src="https://kit.fontawesome.com/de25aad685.js"></script>
     <!-- Index CSS -->
@@ -50,8 +52,6 @@
     <link rel="stylesheet" href="https://use.typekit.net/ehf7hxx.css">
     <!-- Google: Rosario -->
     <link href="https://fonts.googleapis.com/css?family=Rosario:400,500,600,700&display=swap" rel="stylesheet">
-    
-    
 </head>
 
 <body >
